--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div id="landing-image"></div>
-            <img src="F:\Web Dev Codes\Web Dev Projects/CamOne.jpg" alt="">
+            <img src="CamOne.jpg" alt="">
             
             
             </div>
