--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div id="header">
                     <h2>Our Work</h2>
                 </div>
-                <img src="F:\Web Dev Codes\Web Dev Projects/photo1.jpg" alt="">
+                <img src="photo1.jpg" alt="">
                 <div class="caption">
                     <h3>Introducing -Kr.Shubham Anand</h3>
                     <p><mark><i>I grew up in Purnea,a city in Bihar,India.I am a passionate photographer who loves to capture & everything that comes with it.
@@ -43,72 +43,72 @@
                             places & situations they have been.
                         </i></mark></p>
                 </div>
-                <img src="F:\Web Dev Codes\Web Dev Projects/PicsArt_04-10-12.29.26.jpg" alt="">
+                <img src="PicsArt_04-10-12.29.26.jpg" alt="">
                 <div class="caption">
                     <h3>Photography of Memories</h3>
                     <p><mark><i>"Old man take a look at my life, I am a lot like you were."</i></mark></p>
             </div>
-            <img src="F:\Web Dev Codes\Web Dev Projects/20210910_181205.jpg" alt="">
+            <img src="20210910_181205.jpg" alt="">
             <br>
-            <img src="F:\Web Dev Codes\Web Dev Projects/20210912_081458.jpg" alt="">
+            <img src="20210912_081458.jpg" alt="">
                 <div class="caption">
                     <h3>Photography of Mountains</h3>
                     <p><mark><i>"The way up to the top of the mountain is always longer than you think.
                         Don't fool yourself,the moment will arrive when what seemed so near is still very far."
                     </i></mark></p>
                 </div>
-                <img src="F:\Web Dev Codes\Web Dev Projects/PicsArt_03-17-11.28.43.jpg" alt="">
+                <img src="PicsArt_03-17-11.28.43.jpg" alt="">
                 <br>
-                <img src="F:\Web Dev Codes\Web Dev Projects/PicsArt_02-02-10.43.49.jpg" alt="">
+                <img src="PicsArt_02-02-10.43.49.jpg" alt="">
                 
                 <div class="caption">
                         <h3>Photography of Sunsets</h3>
                         <p><mark><i>"When your world moves too fast you lose yourself in the chaos,introduce yourself to each colour of the sunset."</i></mark></p>
         </div>
-        <img src="F:\Web Dev Codes\Web Dev Projects/PicsArt_10-03-04.19.19.jpg" alt="">
+        <img src="PicsArt_10-03-04.19.19.jpg" alt="">
         <br>
-        <img src="F:\Web Dev Codes\Web Dev Projects/PicsArt_02-02-08.02.45.jpg" alt="">
+        <img src="PicsArt_02-02-08.02.45.jpg" alt="">
         <br>
-        <img src="F:\Web Dev Codes\Web Dev Projects/PicsArt_02-02-08.49.11.jpg" alt="">
+        <img src="PicsArt_02-02-08.49.11.jpg" alt="">
         <br>
-        <img src="F:\Web Dev Codes\Web Dev Projects/PicsArt_02-02-08.54.24.jpg" alt="">
+        <img src="PicsArt_02-02-08.54.24.jpg" alt="">
         <br>
-        <img src="F:\Web Dev Codes\Web Dev Projects/PicsArt_02-02-10.22.45.jpg" alt="">
+        <img src="PicsArt_02-02-10.22.45.jpg" alt="">
         <br>
-        <img src="F:\Web Dev Codes\Web Dev Projects/PicsArt_02-02-10.50.55.jpg" alt="">
+        <img src="PicsArt_02-02-10.50.55.jpg" alt="">
         <br>
-        <img src="F:\Web Dev Codes\Web Dev Projects/PicsArt_02-02-10.53.23.jpg" alt="">
+        <img src="PicsArt_02-02-10.53.23.jpg" alt="">
         <br>
-        <img src="F:\Web Dev Codes\Web Dev Projects/Snapchat-1022775098.jpg" alt="">
+        <img src="Snapchat-1022775098.jpg" alt="">
         <br>
-        <img src="F:\Web Dev Codes\Web Dev Projects/Snapchat-2046064980.jpg" alt="">
+        <img src="Snapchat-2046064980.jpg" alt="">
         
          <div class="caption">
                     <h3>Photography of Flora</h3>
                 <p><mark><i>"Adopt the pace of nature,Her secret is patience."</i></mark></p>
 
                 </div>
-                <img src="F:\Web Dev Codes\Web Dev Projects/IMG_1259.jpeg" alt="">
+                <img src="IMG_1259.jpeg" alt="">
                 <br>
-                <img src="F:\Web Dev Codes\Web Dev Projects/IMG_1260.jpeg" alt="">
+                <img src="IMG_1260.jpeg" alt="">
                 <br>
-                <img src="F:\Web Dev Codes\Web Dev Projects/IMG_20171001_075403_784.jpg" alt="">
+                <img src="IMG_20171001_075403_784.jpg" alt="">
                 <br>
-                <img src="F:\Web Dev Codes\Web Dev Projects/IMG_20180614_134100_671.jpg" alt="">
+                <img src="IMG_20180614_134100_671.jpg" alt="">
                 <br>
-                <img src="F:\Web Dev Codes\Web Dev Projects/IMG_20200112_101435-02.jpeg" alt="">
+                <img src="IMG_20200112_101435-02.jpeg" alt="">
                 <br>
-                <img src="F:\Web Dev Codes\Web Dev Projects/PicsArt_02-02-10.27.12.jpg" alt="">
+                <img src="PicsArt_02-02-10.27.12.jpg" alt="">
                 <br>
-                <img src="F:\Web Dev Codes\Web Dev Projects/PicsArt_02-02-10.48.25.jpg" alt="">
+                <img src="PicsArt_02-02-10.48.25.jpg" alt="">
                 <br>
-                <img src="F:\Web Dev Codes\Web Dev Projects/PicsArt_04-06-12.11.56.jpg" alt="">
+                <img src="PicsArt_04-06-12.11.56.jpg" alt="">
                 <br>
-                <img src="F:\Web Dev Codes\Web Dev Projects/PicsArt_05-31-10.19.59.jpg" alt="">
+                <img src="PicsArt_05-31-10.19.59.jpg" alt="">
                 <br>
-                <img src="F:\Web Dev Codes\Web Dev Projects/PicsArt_05-04-08.33.40.jpg" alt="">
+                <img src="PicsArt_05-04-08.33.40.jpg" alt="">
                 <br>
-                <img src="F:\Web Dev Codes\Web Dev Projects/PicsArt_05-04-08.39.22.jpg" alt="">
+                <img src="PicsArt_05-04-08.39.22.jpg" alt="">
                 <br>
                     <div class="caption">
                         <h3>Photography of Fauna</h3>
